bridge: Allow BRDGSIFVLANSET without IFBRF_VLANFILTER

Currently, we disallow BRDGSIFVLANSET when IFBRF_VLANFILTER is disabled.
There's no particular reason to do this, and it causes some undesirable
behaviour such as not being able to remove the tagged config on a member
after disabling vlanfilter on the bridge.

Remove the restriction so BRDGSIFVLANSET is always accepted.

PR:	292019
MFC after:	1 week
Reviewed by:	zlei, p.mousavizadeh_protonmail.com
Sponsored by:	https://www.patreon.com/bsdivy
Differential Revision:	https://reviews.freebsd.org/D54435